landing page and signin page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,25 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div>
+    <div class="container" style="height: 80vh">
+        <div class="container-fluid d-flex justify-content-center vh-100">
+            <div class="container text-center" style="margin-top: 25vh;">
+                <h1 class="display-3">Navigate the Stars</h1>
+                <h1 class="display-6">On NetAstra</h1>
+                <p class="lead">Explore tens of thousands of spacecraft, analyse orbits and investigate their components</p>
+                <button>Liftoff</button>
+            </div>
+            <footer  style="position: absolute; bottom: 35px;">
+                <div class="container text-center" style="font-size: 12px;">
+                    <p class="mb-1">&copy; 2025 NetAstra. All rights reserved.</p>
+                    <ul class="list-inline mb-0">
+                        <li class="list-inline-item"><a href="#" class="text-light text-decoration-none">About</a></li>
+                        <li class="list-inline-item"><a href="#" class="text-light text-decoration-none">Privacy</a></li>
+                        <li class="list-inline-item"><a href="#" class="text-light text-decoration-none">Terms</a></li>
+                    </ul>
+                </div>
+            </footer>
+        </div>
+        <script>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+        </script>
+    </div>
 </div>
