basic controllers setup, db init, signin setup

--- a/Views/Signin/Index.cshtml
+++ b/Views/Signin/Index.cshtml
@@ -1,4 +1,8 @@
+@model SigninViewModel
+
 <div>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p1Pj...snipped...==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
     <style>
         #thirdparty-login button {
             transition: 0.3s;
@@ -8,21 +12,35 @@
         }
     </style>
 
-    <div class="container" style="height: 80vh">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p1Pj...snipped...==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <div class="container">
         <div class="container-fluid d-flex justify-content-center vh-100">
             <div class="container text-center" style="margin-top: 25vh;">
                 <h1 class="display-6">Sign In</h1>
-                <div class="container" style="width: 35vw;">
-                    <form>
-                        <div class="mb-3">
-                            <input type="text" class="form-control" placeholder="Username" style="background-color: #111; color: white; border: 1px solid white;">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+                            @Html.AntiForgeryToken()
+                            <form asp-controller="Signin" asp-action="Signin" method="post">
+                                <div class="mb-3">
+                                    <input type="text" class="form-control" asp-for="Username"
+                                        placeholder="Username"
+                                        style="background-color:#111; color:white; border:1px solid white;">
+                                </div>
+                                <div class="mb-3">
+                                    <div class="input-group">
+                                        <input type="password" asp-for="Password"
+                                            class="form-control"
+                                            placeholder="Password"
+                                            style="background-color:#111; color:white; border:1px solid white;">
+
+                                        <button class="btn btn-outline-light" type="submit">
+                                            Go
+                                        </button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                        <div class="mb-3">
-                            <input type="password" class="form-control" placeholder="Password" style="background-color: #111; color: white; border: 1px solid white;">
-                        </div>
-                        <button type="submit">Go</button>
-                    </form>
+                    </div>
                 </div>
                 <br/>
                 <div class="text-center mt-3" id="thirdparty-login">
@@ -35,6 +53,10 @@
                             <i class="fab fa-microsoft"></i>
                         </button>
                     </div>
+                </div>
+                <br/>
+                <div class="text-center mt-3">
+                    <a style="text-decoration: underline;" asp-controller="Signup" asp-action="Index">Sign Up</a>
                 </div>
             </div>
         </div>
