--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,16 +5,15 @@
                 <h1 class="display-3">Navigate the Stars</h1>
                 <h1 class="display-6">On NetAstra</h1>
                 <p class="lead">Explore tens of thousands of spacecraft, analyse orbits and investigate their components</p>
-                <button>Liftoff</button>
+                <form asp-controller="Explore" asp-action="Index" method="get">
+                    <button type="submit">
+                        Liftoff
+                    </button>
+                </form>
             </div>
             <footer  style="position: absolute; bottom: 35px;">
                 <div class="container text-center" style="font-size: 12px;">
-                    <p class="mb-1">&copy; 2025 NetAstra. All rights reserved.</p>
-                    <ul class="list-inline mb-0">
-                        <li class="list-inline-item"><a href="#" class="text-light text-decoration-none">About</a></li>
-                        <li class="list-inline-item"><a href="#" class="text-light text-decoration-none">Privacy</a></li>
-                        <li class="list-inline-item"><a href="#" class="text-light text-decoration-none">Terms</a></li>
-                    </ul>
+                    <p class="mb-1">@DateTime.Now.Year NetAstra. All rights reserved.</p>
                 </div>
             </footer>
         </div>
