--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="mainNavbar">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item me-4">
-                            <a class="nav-link fs-5" asp-controller="Home" asp-action="Index">Explore</a>
+                            <a class="nav-link fs-5" asp-controller="Explore" asp-action="Index">Explore</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link fs-5" asp-controller="Signin" asp-action="Index">Sign In</a>
@@ -37,6 +37,9 @@
         <script src="~/lib/jquery/dist/jquery.min.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/lib/jquery/jquery.min.js"></script>
+        <script src="~/lib/jquery-validation/jquery.validate.min.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
         @await RenderSectionAsync("Scripts", required: false)
     </body>
 </html>
